--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
         <div class="row" style="height: 60vh">
           <div class="login-img"></div>
         </div>
-        <div class="row">
+        <div class="row" style="margin-top: 75px">
           <div class="welcome">
             <div class="title pb-4">Organize. Distribute. Analyze.</div>
             <p class="text">
