--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -5,13 +5,11 @@
     background-position: left;
     background-size: contain;
     background-repeat: no-repeat;
-    width: 40% !important;
-    height: 40% !important;
+    width: 320px !important;
+    height: 328px !important;
     position: absolute;
-    left: 10%;
-    right: 75%;
-    top: 15%;
-    bottom: 45%;
+    left: 83px;
+    top: 134px;
 }
 
 .page {
