--- a/src/app/apps/apps.component.scss
+++ b/src/app/apps/apps.component.scss
@@ -1,19 +1,22 @@
 @import "src/assets/scss/bootstrap/_functions.scss";
 @import "src/assets/scss/bootstrap/_variables.scss";
 
+
+.logo {
+  min-height: 42px;
+  max-height: 42px;
+  min-width: 142px;
+  max-width: 142px;
+  background-repeat: no-repeat;
+  background-size: 186px;
+  background-position: center;
+}
+
 .header {
   min-height: 60px;
   max-height: 60px;
 
-  .logo {
-    min-height: 42px;
-    max-height: 42px;
-    min-width: 142px;
-    max-width: 142px;
-    background-repeat: no-repeat;
-    background-size: 186px;
-    background-position: center;
-  }
+
 
   .text {
     min-height: 50px;
@@ -70,8 +73,8 @@
 .sidenav {
   min-width: 60px;
   max-width: 260px;
-  min-height: calc(100vh - 60px);
-  max-height: calc(100vh - 60px);
+  // min-height: calc(100vh - 60px);
+  max-height: 100vh;
   transition: 0.25s;
   overflow-y: auto;
   scrollbar-gutter: stable;
