--- a/src/app/home/local-bot/local-bot.component.html
+++ b/src/app/home/local-bot/local-bot.component.html
@@ -140,7 +140,7 @@
   </div>
   <div *ngIf="isCreate || addNewKey || addNewProperty" class="slide-overlay position-fixed"></div>
   <div *ngIf="isCreate" class="slide-window position-fixed bg-white border-left p-4">
-    <span class="fa fa-times text-secondary hover float-right" id="closeicon" (click)="closeWindow()"></span>
+    <span class="dsi dsi-close hover float-right closeicon" id="closeicon" (click)="closeWindow()"></span>
     <div class="d-flex align-items-center justify-content-between mb-4">
       <div class="d-flex align-items-center">
         <h5 class="font-weight-bold">Create Bot</h5>
@@ -178,7 +178,7 @@
     </form>
   </div>
   <div *ngIf="addNewKey && !isCreate" class="slide-window position-fixed bg-white border-left p-4">
-    <span class="fa fa-times text-secondary hover float-right" id="closeicon" (click)="closeWindow()"></span>
+    <span class="dsi dsi-close hover float-right closeicon" id="closeicon" (click)="closeWindow()"></span>
     <div class="d-flex align-items-center justify-content-between mb-4">
       <div class="d-flex align-items-center">
         <h5 class="font-weight-bold">{{ editMode ? 'Edit Key' : 'Create Key' }}</h5>
@@ -255,7 +255,7 @@
     </form>
   </div>
   <div *ngIf="addNewProperty && !isCreate" class="slide-window position-fixed bg-white border-left p-4">
-    <span class="fa fa-times text-secondary hover float-right" id="closeicon" (click)="closeWindow()"></span>
+    <span class="dsi dsi-close hover float-right closeicon" id="closeicon" (click)="closeWindow()"></span>
     <div class="d-flex align-items-center justify-content-between mb-4">
       <div class="d-flex align-items-center">
         <h5 class="font-weight-bold">
