--- a/src/app/home/schema-utils/integration/integration.component.scss
+++ b/src/app/home/schema-utils/integration/integration.component.scss
@@ -62,9 +62,39 @@
 
 .field-error-symbol {
   top: 7px;
-  left: 90%;
+  right: 10px;
+}
+
+.dsi-info-circle{
+  top: 9px;
+  right: 10px;
 }
 
 sup {
   top: auto !important;
+}
+
+.hook-window,
+.preview-hook-window {
+  height: 100vh;
+  width: 360px;
+  top: 0;
+  right: -360px;
+  z-index: 2;
+  transition: 0.2s;
+  overflow: auto;
+  padding-top: 40px !important;
+
+  &.show {
+    right: 0px !important;
+  }
+}
+
+.overlay {
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background: rgba($color: #000000, $alpha: 0.6);
 }
