--- a/src/app/utils/field-type/field-type-selector/field-type-selector.component.scss
+++ b/src/app/utils/field-type/field-type-selector/field-type-selector.component.scss
@@ -2,14 +2,26 @@
 @import "src/assets/scss/bootstrap/_variables.scss";
 
 .type-dropdown {
-  top: 2rem;
+  top: 36px;
   z-index: 2;
   box-shadow: 0 0 15px $gray-400;
 }
 
+.type-div-item {
+  &:hover {
+    background: $light;
+  }
+
+  &.disbaled {
+    opacity: 0.4;
+    color: $light;
+  }
+}
+
 .type-div {
-  max-width: 250px;
+  width: 300px;
   border-top: 0 !important;
+
   .type-width {
     width: 24px;
     height: 24px;
@@ -17,6 +29,7 @@
     display: inline-block;
     text-decoration: none;
   }
+
   .type-width:hover {
     background: $light;
     border-radius: 4px;
