--- a/src/app/home/control-panel/user/user.component.html
+++ b/src/app/home/control-panel/user/user.component.html
@@ -504,6 +504,17 @@
             </div>
           </div>
           <div class="form-group position-relative">
+            <label for="key">
+              Key
+              <sup class="text-danger">*</sup>
+            </label>
+            <div class="position-relative">
+              <input id="key" class="form-control bg-white text-muted pr-4" type="text" placeholder="Key"
+                formControlName="key" />
+              <small class="form-text pl-2 text-muted">Use this key to access value</small>
+            </div>
+          </div>
+          <div class="form-group position-relative">
             <label for="type">
               Type
               <sup class="text-danger">*</sup>
