--- a/src/app/utils/search-box/search-box.component.html
+++ b/src/app/utils/search-box/search-box.component.html
@@ -1,7 +1,7 @@
 <div class="position-relative d-flex justify-content-center align-items-center"
   [ngClass]="{'ignore-outside': ignoreOutside}">
   <div *ngIf="openSearchBox" class="search-box position-relative d-flex justify-content-center align-items-center"
-    odpClickOutside (outside)="open ? '': openSearchBox=false">
+    odpClickOutside (outside)="open || searchTerm ? '': openSearchBox=false">
     <input type="text" name="searchTerm" id="searchTerm" maxlength="40" #searchInput [ngModel]="searchTerm"
       (ngModelChange)="onChange($event)" (keyup.enter)="onEnterKey($event)" (keyup.backspace)="onBackspaceKey($event)"
       (keydown.control.backspace)="onCtrlBackspace($event)" (focus)="onFocus($event)" autocomplete="off"
@@ -15,11 +15,10 @@
     <span #infoTooltip="ngbTooltip" *ngIf="!searchInput.value"
       class="info fa fa-info-circle text-muted position-absolute high-zIndex" [ngbTooltip]="info" container="body"
       [placement]="toolTipDirection">&nbsp;</span>
-    <span *ngIf="searchInput.value" class="fa fa-times-circle text-danger position-absolute hover high-zIndex"
-      (click)="clear()" ngbTooltip="Clear Search" container="body" [placement]="toolTipDirection"></span>
+    <span *ngIf="searchInput.value" class="fa fa-times-circle text-danger position-absolute hover high-zIndex ignore-outside"
+      (click)="clear();searchInput.focus()" ngbTooltip="Clear Search" container="body" [placement]="toolTipDirection"></span>
   </div>
-  <button *ngIf="!openSearchBox" type="button" class="btn btn-white border ignore-outside"
-    (click)="openSearchBox=true">
+  <button *ngIf="!openSearchBox" type="button" class="btn btn-white border ignore-outside" (click)="openSearchBox=true">
     <span class="dsi dsi-search text-secondary ignore-outside"></span>
   </button>
 </div>
